# WASP

./: .gitignore  CMakeLists.txt  COPYRIGHT  Doxyfile.in  README.md
Common/: CMakeLists.txt
Common/include/: BaseImageTypes.h  GlobalDefs.h  ImageResampler.h  MetadataAngles.h  MetadataBands.h  MetadataHelper.h  MetadataHelperFactory.h  MuscateMetadataHelper.h  ResamplingBandExtractor.h  TestImageCreator.h
Common/src/: GlobalDefs.cpp  MetadataBands.cpp  MetadataHelper.cpp  MetadataHelperFactory.cpp  MuscateMetadataHelper.cpp
Common/test/: CMakeLists.txt  test_ImageResampler.cpp  test_MetadataBands.cpp  test_MuscateMetadataHelper.cpp  test_MuscateMetadataHelperVenus.cpp
CompositePreprocessing/: CMakeLists.txt  scattering_coeffs_10m.txt  scattering_coeffs_20m.txt
CompositePreprocessing/include/: ComputeNDVI.h  CreateS2AnglesRaster.h  DirectionalCorrection.h  DirectionalCorrectionFilter.h  DirectionalCorrectionFunctor.h  DirectionalModel.h  MaskExtractorFilter.h  MaskExtractorFunctor.h  PreprocessingAdapter.h  PreprocessingSentinel.h  PreprocessingVenus.h
CompositePreprocessing/src/: CompositePreprocessing.cpp  ComputeNDVI.cpp  CreateS2AnglesRaster.cpp  DirectionalCorrection.cpp  DirectionalCorrectionFunctor.txx  DirectionalModel.cpp  MaskExtractorFilter.txx  PreprocessingAdapter.cpp  PreprocessingSentinel.cpp  PreprocessingVenus.cpp
CompositePreprocessing/test/: CMakeLists.txt  test_ComputeNDVI.cpp  test_CreateS2AnglesRaster.cpp  test_DirectionalCorrection.cpp  test_MaskExtractorFilter.cpp
MuscateMetadata/: CMakeLists.txt
MuscateMetadata/include/: FluentXML.hpp  MetadataUtil.hpp  MuscateMetadata.hpp  MuscateMetadataReader.hpp  MuscateMetadataWriter.hpp  ViewingAngles.hpp  string_utils.hpp  tinyxml_utils.hpp
MuscateMetadata/src/: FluentXML.cpp  MetadataUtil.cpp  MuscateMetadataReader.cpp  MuscateMetadataWriter.cpp  ViewingAngles.cpp  string_utils.cpp  tinyxml_utils.cpp
MuscateMetadata/test/: CMakeLists.txt  test_MuscateMetadataReadWrite.cpp  test_MuscateMetadataReader.cpp  test_MuscateMetadataWriteRead.cpp
ProductFormatter/: CMakeLists.txt
ProductFormatter/include/: ProductCreatorAdapter.h  ProductCreatorSentinelMuscate.h  ProductCreatorVenusMuscate.h  ProductDefinitions.h
ProductFormatter/src/: ProductCreatorAdapter.cpp  ProductCreatorSentinelMuscate.cpp  ProductCreatorVenusMuscate.cpp  ProductFormatter.cpp
PythonScripts/: CMakeLists.txt  CompareL3AProducts.py  WASP.py  base_comparison.py  test_S2A_T33UUU_8_20150727.py  test_S2B_T31TCH_1_20171008.py  test_S2B_T31TGL_1_20180321.py  test_S2X_T31TCJ_11_20180511.py  test_VNS_FR-LUS_4_20180207.py
PythonScripts/.spyproject/: workspace.ini
Scripts/: WASP
UpdateSynthesis/: CMakeLists.txt
UpdateSynthesis/include/: BandsDefs.h  UpdateSynthesisFunctor.h
UpdateSynthesis/src/: UpdateSynthesis.cpp  UpdateSynthesisFunctor.txx
WeightCalculation/TotalWeight/: CMakeLists.txt
WeightCalculation/TotalWeight/include/: TotalWeightComputation.h
WeightCalculation/TotalWeight/src/: TotalWeight.cpp  TotalWeightComputation.cpp
WeightCalculation/WeightAOT/: CMakeLists.txt
WeightCalculation/WeightAOT/include/: WeightAOTComputation.h
WeightCalculation/WeightAOT/src/: WeightAOT.cpp  WeightAOTComputation.cpp
WeightCalculation/WeightOnClouds/: CMakeLists.txt
WeightCalculation/WeightOnClouds/include/: CloudMaskBinarization.h  CloudWeightComputation.h  CloudsInterpolation.h  CuttingImageFilter.h  GaussianFilter.h  PaddingImageHandler.h  ROIImageFilter.h
WeightCalculation/WeightOnClouds/src/: WeightOnClouds.cpp
