install(FILES WASP.py DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

add_test(NAME test_S2B_T31TGL_1_20180321
	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_S2B_T31TGL_1_20180321.py
	WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
	)

add_test(NAME test_VNS_FR-LUS_4_20180207
	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_VNS_FR-LUS_4_20180207.py
	WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
	)

add_test(NAME test_S2B_T31TCH_1_20171008
	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_S2B_T31TCH_1_20171008.py
	WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
	)

add_test(NAME test_S2A_T33UUU_8_20150727
	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_S2A_T33UUU_8_20150727.py
	WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
	)

set_tests_properties(test_S2A_T33UUU_8_20150727 PROPERTIES TIMEOUT 5000)

add_test(NAME test_S2X_T31TCJ_11_20180511
	COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_S2X_T31TCJ_11_20180511.py
	WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
	)

set_tests_properties(test_S2X_T31TCJ_11_20180511 PROPERTIES TIMEOUT 7000)
